# teste-tecnico-senior-rpa

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  HOW_TO_USE.md  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  USAGE.md  docker-compose.arm64.yml  docker-compose.yml  entrypoint.sh  examples.sh  flake.nix  pyproject.toml  requirements.txt  test_crawlers.sh
.github/: ENVIRONMENTS.md
.github/workflows/: ci.yml  push-to-gcr.yml
app/: config.py  database.py  init_db.py  main.py  queue.py  worker.py
app/crawlers/: crawler.py  tests.py
app/models/: films.py  hockey_teams.py  jobs.py
app/tests/: conftest.py  test_crawlers.py  test_integration.py  test_models_films.py  test_models_hockey_teams.py
