[project]
name = "teste-tecnico-senior-rpa"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
src = ["app", "tests"]
